# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Untitled Diagram.drawio  arkkitehtuuri.md  changelog.md  kayttoohje.md  lainatut_kuvat.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: 2maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: actions.py  cavegame.py  config.py  current_decision.py  current_text.py  main.py  restart.py  score_counter.py  scores.py  text_lines.py
src/data/: test_score_file.db
src/repository/: scores.py
src/services/: actions.py  current_decision.py  score_counter.py
src/sprites/: background.py  barrier.py  door.py  enemy.py  item.py  note.py  ran.py  text_lines.py  texts.py
src/tests/: actions_test.py  currents_test.py  game_test.py  scores_test.py  sprites_test.py
src/ui/: ending_screen.py  events.py  first_room.py  game.py  restart.py  rooms.py  sprite_setter.py  starting_screen.py
